--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/catuchi/Find_A_Pet#readme",
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "parcel": "^2.7.0"
   },
   "dependencies": {
